--- a/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
@@ -24,12 +24,14 @@
   <link href="css/clean-blog.min.css" rel="stylesheet">
   <link href="css/homepage.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/3.1.0/introjs-rtl.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/3.1.0/introjs.min.css">
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-lg navbar-light" data-intro='Bienvenido a Sabores Compartidos'>
     <div class="container">
       <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,20 +40,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-op" href="about.html">Detalle</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-op" href="receta.html">Receta</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-op" href="recetas.html">Buscar</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-op" href="contact.html">Contáctanos</a>
-          </li>
-          <li class="nav-item">
+          <li class="nav-item" data-step='2' data-intro="En esta página podrás enterarte de las últimas noticias y recetas añadidas">
             <a class="nav-op" href="noticias.html">Noticias</a>
+          </li>
+          <li class="nav-item" data-step='3' data-intro="Aqui podrás ponerte en contacto con nosotros">
+            <a class="nav-op" href="contact.html" >Contáctanos</a>
+          </li>
+          <li class="nav-item" data-step='4' data-intro="Aquí podras ver una breve descripción de nuestro equipo">
+            <a class="nav-op" href="about.html" >Quiénes somos</a>
           </li>
           <li class="nav-item IniRegNav">
             <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
@@ -316,6 +312,10 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/clean-blog.min.js"></script>
+
+  <!-- IntroJS CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/3.1.0/intro.min.js"></script>
+  <script src="js/introjs.js"></script>
 
 </body>
 
