--- a/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
@@ -31,7 +31,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-lg navbar-light" data-intro='Bienvenido a Sabores Compartidos'>
     <div class="container">
       <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,20 +40,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-op" href="about.html">Detalle</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-op" href="receta.html">Receta</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-op" href="recetas.html">Buscar</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-op" href="contact.html">Contáctanos</a>
-          </li>
-          <li class="nav-item">
+          <li class="nav-item" data-step='2' data-intro="En esta página podrás enterarte de las últimas noticias y recetas añadidas">
             <a class="nav-op" href="noticias.html">Noticias</a>
+          </li>
+          <li class="nav-item" data-step='3' data-intro="En este menú podrás observar y filtrar las recetas disponibles">
+            <a class="nav-op" href="recetas.html">Recetas</a>
+          </li>
+          <li class="nav-item" data-step='4' data-intro="Aqui podrás ponerte en contacto con nosotros">
+            <a class="nav-op" href="contact.html" >Contáctanos</a>
+          </li>
+          <li class="nav-item" data-step='5' data-intro="Aquí podras ver una breve descripción de nuestro equipo">
+            <a class="nav-op" href="about.html" >Quiénes somos</a>
           </li>
           <li class="nav-item IniRegNav">
             <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
@@ -68,7 +65,7 @@
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="recetas.html">
-  			<img src="img/search_icon.png" alt="Ícono de búsqueda">
+      <i class="fas fa-search"></i> 
   		</a>
       	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
       	<div id="registro" class="collapse navbar-collapse">
