--- a/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
@@ -206,7 +206,100 @@
   </div>
   <!--recipe section-->
 
-
+  <section class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="comments">
+          <div class="comments-details">
+            <span class="total-comments comments-sort">117 Comentarios</span>
+            <span class="dropdown">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">Ordenar por <span class="caret"></span></button>
+                <div class="dropdown-menu">
+                  <a href="#" class="dropdown-item">Mejores comentarios</a>
+                <a href="#" class="dropdown-item">Nuevos comentarios</a>
+                </div>
+            </span>     
+          </div>
+          <div class="comment-box add-comment">
+            <span class="commenter-pic">
+              <i class="far fa-user-circle"></i>
+            </span>
+            <span class="commenter-name">
+              <input type="text" placeholder="Add a public comment" name="Add Comment">
+              <button type="submit" class="btn btn-default">Comentar</button>
+              <button type="cancel" class="btn btn-default">Cancelar</button>
+            </span>
+          </div>
+          <div class="comment-box">
+            <span class="commenter-pic">
+              <i class="far fa-user-circle"></i>
+            </span>
+            <span class="commenter-name">
+              <a href="#">Happy markuptag</a> <span class="comment-time">Hace 2 horas</span>
+            </span>       
+            <p class="comment-txt more">Suspendisse massa enim, condimentum sit amet maximus quis, pulvinar sit amet ante. Fusce eleifend dui mi, blandit vehicula orci iaculis ac.</p>
+            <div class="comment-meta">
+              <button class="comment-like"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> 99</button>
+              <button class="comment-dislike"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i> 149</button> 
+              <button class="comment-reply reply-popup"><i class="fa fa-reply-all" aria-hidden="true"></i> Responder</button>         
+            </div>
+            <div class="comment-box add-comment reply-box">
+              <span class="commenter-pic">
+                <i class="far fa-user-circle"></i>
+              </span>
+              <span class="commenter-name">
+                <input type="text" placeholder="Add a public reply" name="Add Comment">
+                <button type="submit" class="btn btn-default">Responder</button>
+                <button type="cancel" class="btn btn-default reply-popup">Cancel</button>
+              </span>
+            </div>
+          </div>
+          <div class="comment-box">
+            <span class="commenter-pic">
+              <i class="far fa-user-circle"></i>
+            </span>
+            <span class="commenter-name">
+              <a href="#">Happy markuptag</a> <span class="comment-time">Hace 2 horas</span>
+            </span>       
+            <p class="comment-txt more">Suspendisse massa enim, condimentum sit amet maximus quis, pulvinar sit amet ante. Fusce eleifend dui mi, blandit vehicula orci iaculis ac.</p>
+            <div class="comment-meta">
+              <button class="comment-like"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> 99</button>
+              <button class="comment-dislike"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i> 149</button> 
+              <button class="comment-reply"><i class="fa fa-reply-all" aria-hidden="true"></i> Responder</button>         
+            </div>
+            <div class="comment-box replied">
+              <span class="commenter-pic">
+                <i class="far fa-user-circle"></i>
+              </span>
+              <span class="commenter-name">
+                <a href="#">Happy markuptag</a> <span class="comment-time">Hace 2 horas</span>
+              </span>       
+              <p class="comment-txt more">Suspendisse massa enim, condimentum sit amet maximus quis, pulvinar sit amet ante. Fusce eleifend dui mi, blandit vehicula orci iaculis ac.</p>
+              <div class="comment-meta">
+                <button class="comment-like"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> 99</button>
+                <button class="comment-dislike"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i> 149</button> 
+                <button class="comment-reply"><i class="fa fa-reply-all" aria-hidden="true"></i> Responder</button>         
+              </div>
+              <div class="comment-box replied">
+                <span class="commenter-pic">
+                  <i class="far fa-user-circle"></i>
+                </span>
+                <span class="commenter-name">
+                  <a href="#">Happy markuptag</a> <span class="comment-time">Hace 2 horas</span>
+                </span>       
+                <p class="comment-txt more">Suspendisse massa enim, condimentum sit amet maximus quis, pulvinar sit amet ante. Fusce eleifend dui mi, blandit vehicula orci iaculis ac.</p>
+                <div class="comment-meta">
+                  <button class="comment-like"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> 99</button>
+                  <button class="comment-dislike"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i> 149</button> 
+                  <button class="comment-reply"><i class="fa fa-reply-all" aria-hidden="true"></i> Responder</button>         
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
